--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   "dependencies": {
     "base-64": "^0.1.0",
     "bcrypt": "^5.0.0",
+    "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "http": "0.0.1-security",
     "jest": "^26.2.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.28",
