--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.28",
     "multer": "^1.4.2",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "superagent": "^6.0.0"
   }
 }
