--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "![logo](fill)",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "jest --verbose --coverage"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,8 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "jest": "^26.2.2",
+    "faker": "^4.1.0",
+    "jest": "^26.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.28",
     "multer": "^1.4.2",
