--- a/package.json
+++ b/package.json
@@ -22,23 +22,21 @@
     "aws-sdk": "^2.730.0",
     "base-64": "^0.1.0",
     "bcrypt": "^5.0.0",
-    "discord.js": "^12.2.0",
     "cors": "^2.8.5",
+    "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "faker": "^4.1.0",
-    "jest": "^26.3.0",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
+    "jest": "^26.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.28",
     "multer": "^1.4.2",
-    "socket.io": "^2.3.0",
-    "superagent": "^6.0.0",
     "multer-s3": "^2.9.0",
     "path": "^0.12.7",
-    "socket.io": "^2.3.0"
-
+    "socket.io": "^2.3.0",
+    "superagent": "^6.0.0"
   }
 }
